# docs

./: .dockerignore  .gitignore  .gitmodules  .prettierignore  .readthedocs.yaml  Dockerfile  LICENSE  README.md  build_tag_and_publish.sh  main.py  measurement.py  mkdocs.yml  pyproject.toml  requirements.txt  skaffold.env  skaffold.yaml
.github/workflows/: ci.yaml
deployment/: ingress-values.yaml  sparse-checkout.sh
docs/: humans.txt  index.md  llms.txt  robots.txt
docs/UML/drawio/: .$Thing.drawio.svg.bkp  .$Thing.drawio.svg.dtmp  hexagonal-architecture.drawio
docs/api-reference/: global-config.md  namespaces.md
docs/api-reference/action/: index.md
docs/api-reference/clients/: base.md  object-proxy.md
docs/api-reference/events/: event-dispatcher.md  index.md
docs/api-reference/property/: index.md
docs/api-reference/rpc-server/: rpc-server.md
docs/api-reference/serializers/: index.md
docs/api-reference/state_machine/: bound-fsm.md  state-machine.md
docs/api-reference/td/: data_schema.md  tm.md
docs/code/: no_network_thing.py  thing_with_http_server.py  thing_with_http_server_2.py  thing_without_http_server.py
docs/design/: action-descriptors.md  descriptor-registry.md  descriptors.md  event-descriptors.md  hexagonal-architecture.md  metaclasses.md  property-descriptors.md  serialization.md  state-machine.md  zmq.md
docs/howto/: clients.md  servers.md  state-machine.md
docs/introduction/: contributing.md  installation.md  license.md  resources.md  scanning.md  use-cases.md
docs/stylesheets/: extra.css
overrides/: main.html
source/howto/: clients.rst  index.rst  state_machine.rst
(+131 files in other folders)
