[project]
name = "hololinked-docs-v2"
version = "0.1.0"
description = "mkdocs material based documentation for hololinked"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-autorefs==1.4.2",
    "mkdocs-git-authors-plugin==0.9.5",
    "mkdocs-git-revision-date-localized-plugin==1.4.7",
    "mkdocs-macros-plugin==1.3.7",
    "mkdocs-material==9.6.14",
    "mkdocstrings[python]==0.29.1",
    "pydantic==2.11.5",
    "pip>=25.2",
]

[dependency-groups]
dev = [
    "ConfigParser==7.1.0",
    "fastjsonschema==2.20.0",
    "ipython==8.12.3",
    "serpent==1.41",
    "numpy>=2.0.0",
    "pip>=25.2",
    "pandas==2.2.3",
    "faker==37.5.0",
    "bcrypt==4.3.0",
    "ruff>=0.12.10",
    "jupyter>=1.1.1",
    "requests==2.32.3",
    "imageio",
]
repo = [
    "hololinked"
]

[tool.uv.sources]
hololinked = { git = "https://github.com/hololinked-dev/hololinked.git", branch = "main" }